--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
-	<button> click me </button>
+			<button class='click'> click me </button>
 
-	<script>
-		$(function(){
-			$('button').click(function(){
-				alert('hello!');
-			});
+<button class='noclick'> don't click me </button>
+
+<script>
+	$(function(){
+		$('.click').click(function(){
+			alert('hello!');
 		});
+
+		$('.noclick').click(function(){
+			alert('i told you not to click me!');
+			$('button').remove();
+		});
+
+	});
 	</script>
 
 </body>
